@@ -7,8 +7,9 @@ GRO_USER  = willis
 # Remote access related variables
 SF_SHELL_DOMAIN     = web.sourceforge.net
 SF_RELEASE_DOMAIN   = frs.sourceforge.net
-SF_VIMCDOC_DIR      = htdocs/doc
-SF_URL              = $SF_USER,vimcdoc@$SF_SHELL_DOMAIN:$SF_VIMCDOC_DIR
+SF_URL              = $SF_USER,vimcdoc@$SF_SHELL_DOMAIN
+# deprecated: ftp is no longer allowed by sourceforge.
+SF_FTP              = ftp://anonymous@upload.sourceforge.net/incoming
 SF_SFTP_URL         = $SF_USER@$SF_RELEASE_DOMAIN:uploads
 GRO_SHELL_DOMAIN    = gro.clinux.org
 GRO_URL             = $GRO_USER@$GRO_SHELL_DOMAIN:/group/vcd/incoming
@@ -21,3 +22,4 @@ RELEASE_NAME = $(VCD)-$(VERSION)
 TARBALL      = $(RELEASE_NAME).tar
 TARGZ        = $(TARBALL).gz
 WIN32EXE     = $(RELEASE_NAME)-setup.exe
+WIN32EXE_UNICODE = $(RELEASE_NAME)-setup-unicode.exe
