@@ -9,17 +9,17 @@ TOPLEVELDIR = ..
     :sys svn commit $target
     :sys ./vim2html.pl tags $target
     @html_file = sufreplace('.txt', '.html', target)
-    :sys scp $html_file $(SF_URL)/htdocs/doc
+    :sys scp $html_file $(SF_URL):htdocs/doc
     :del $html_file 
 
 css {virtual}: vim-stylesheet.css
-    :sys scp vim-stylesheet.css $(SF_URL)/htdocs/doc
+    :sys scp vim-stylesheet.css $(SF_URL):htdocs/doc
 
 allhtml {virtual}:
     :sys ./vim2html.pl tags *.txt
 
 publish: allhtml css
-    :sys scp *.html $(SF_URL)/htdocs/doc
+    :sys scp *.html $(SF_URL):htdocs/doc
 
 gro {virtual}: allhtml vim-stylesheet.css
     :sys sftp -b batch $GRO_URL
