@@ -1,3 +1,13 @@
+2008-12-23 22:40  yianwillis
+
+	* trunk/ChangeLog, trunk/INSTALL, trunk/NEWS, trunk/TODO,
+	  trunk/VERSION, trunk/common.aap, trunk/doc/main.aap,
+	  trunk/doc/vim-stylesheet.css, trunk/guides.txt, trunk/main.aap,
+	  trunk/release/batch, trunk/release/main.aap,
+	  trunk/vcd-setup-unicode.nsi, trunk/vcd-setup.nsi,
+	  trunk/vimcdoc.sh, trunk/vimcdoc.vim, trunk/www/htdocs/main.aap,
+	  trunk/www/htdocs/vimcdoc-sf.py: Preparing for the 1.7.0 release
+
 2008-12-13 00:44  yianwillis
 
 	* trunk/doc/various.txt, trunk/doc/version4.txt,
